Fix: Direct ngrok API calls with proper CORS for Vercel login